# musicmeta

./: pyproject.toml
note/: Untitled1.ipynb
src/musicmeta/: __init__.py  albumname.py  albumtest.py  discno.py  fileparse.py  filesearch.py  fixDirs.py  fixdir.py  genalbum.py  gentags.py  mid.py  mp3TrackNumberAnalysis.py  mp3id.py  muformat.py  musicPath.py  musicid.py  mutag.py  play.py  script.py  segment.py  setup.py  tagtest.py  tagutils.py  utils.py
tests/: test_import.py
